# algorithmic-futures-platform

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: orb_preregister.yaml
core/: __init__.py  execution.py  microstructure.py  risk.py
docs/: ARCHITECTURE.md  VALIDATION.md
ingestion/: __init__.py  microflow.py
pipeline/: __init__.py  features.py  labels.py  manifest.py  replay.py  weights.py
scripts/: generate_portfolio_figures.py
strategies/rule_based/: __init__.py  engine.py  orb.py  validation.py
tests/: test_core.py  test_ingestion.py  test_pipeline.py  test_strategy.py  test_validation.py
validation/: __init__.py  diagnostics.py  purged_cv.py
