[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithmic-futures-platform"
version = "0.1.0"
description = "Synthetic, reproducible futures research and execution methodology"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pandas>=2.1", "matplotlib>=3.8", "PyYAML>=6.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "pipeline*", "validation*", "strategies*", "ingestion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
